Improvements son CI